--- a/hkdse_english_intensive_course_final.html
+++ b/hkdse_english_intensive_course_final.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="bg-white bg-opacity-20 backdrop-blur-sm rounded-lg px-6 py-3">
                     <i class="fas fa-clock mr-2"></i>
-                    <span class="font-semibold">每日5小時密集訓練</span>
+                    <span class="font-semibold">每日5小時密集訓練（周一到五上课）</span>
                 </div>
             </div>
         </div>
@@ -216,7 +216,7 @@
                 <div class="bg-gray-50 p-4 rounded-lg text-center">
                     <p class="text-gray-600">
                         <i class="fas fa-info-circle mr-2"></i>
-                        每日共5小時密集訓練，中午12:00-2:00為休息時間
+                        周一至五上课，每日共5小時密集訓練，中午12:00-2:00為休息時間
                     </p>
                 </div>
             </div>
@@ -395,7 +395,7 @@
             <div class="max-w-4xl mx-auto">
                 <div class="bg-white p-8 rounded-lg card-shadow">
                     <div class="text-center mb-8">
-                        <div class="text-4xl font-bold accent-color mb-2">HK$6,800</div>
+                        <div class="text-4xl font-bold accent-color mb-2">RMB/HKD $7,800</div>
                         <p class="text-gray-600">10天完整課程</p>
                     </div>
                     <div class="grid md:grid-cols-2 gap-8">
@@ -404,7 +404,7 @@
                             <div class="space-y-2">
                                 <p class="flex items-center text-gray-600">
                                     <i class="fas fa-check text-green-500 mr-2"></i>
-                                    10天完整課程（50小時）
+                                    10天完整課程（30小時上课+25小時训练）
                                 </p>
                                 <p class="flex items-center text-gray-600">
                                     <i class="fas fa-check text-green-500 mr-2"></i>
@@ -429,7 +429,7 @@
                             <div class="space-y-2">
                                 <p class="flex items-center text-gray-600">
                                     <i class="fas fa-tag text-blue-500 mr-2"></i>
-                                    早鳥優惠：7月10日前報名享9折
+                                    早鳥優惠：7月15日前報名享9折
                                 </p>
                                 <p class="flex items-center text-gray-600">
                                     <i class="fas fa-users text-blue-500 mr-2"></i>
@@ -496,29 +496,29 @@
                             <div class="flex items-center">
                                 <i class="fas fa-phone mr-3"></i>
                                 <div>
-                                    <h4 class="font-semibold">電話</h4>
-                                    <p>+852 2345 6789</p>
+                                    <h4 class="font-semibold">微信</h4>
+                                    <p>MSS-JC</p>
                                 </div>
                             </div>
                             <div class="flex items-center">
                                 <i class="fas fa-envelope mr-3"></i>
                                 <div>
                                     <h4 class="font-semibold">電郵</h4>
-                                    <p>info@wanhecollege.edu.hk</p>
+                                    <p>admin@vanhok.com</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
                                 <i class="fas fa-map-marker-alt mr-3 mt-1"></i>
                                 <div>
                                     <h4 class="font-semibold">地址</h4>
-                                    <p>香港九龍旺角彌敦道123號<br>萬鶴書院教學中心</p>
+                                    <p>深圳福田区彩田路中深花园大厦A座403<br>萬鶴書院DSE教學中心</p>
                                 </div>
                             </div>
                             <div class="flex items-center">
                                 <i class="fab fa-whatsapp mr-3"></i>
                                 <div>
                                     <h4 class="font-semibold">WhatsApp</h4>
-                                    <p>+852 9876 5432</p>
+                                    <p>+852 xxxx xxxx</p>
                                 </div>
                             </div>
                         </div>
@@ -531,7 +531,7 @@
                             名額有限，請盡早報名！
                         </p>
                         <p class="text-yellow-700 mt-2">
-                            立即致電或WhatsApp查詢報名詳情
+                            立即致電或Wechat查詢報名詳情
                         </p>
                     </div>
                 </div>
